--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "bootstrap": "^4.6.0",
+    "expo": "^40.0.1",
+    "expo-font": "^9.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-native": "^0.63.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "styled-components": "^5.2.1",
